--- a/src/Organiza/TableCss.css
+++ b/src/Organiza/TableCss.css
@@ -1,10 +1,13 @@
 .table-row-cell:filled:selected { 
-  -fx-background: -fx-control-inner-background ;
-  -fx-background-color: -fx-table-cell-border-color, -fx-background ;
-  -fx-background-insets: 0, 0 0 1 0 ;
-  -fx-table-cell-border-color: #2c2c2c;
+    -fx-background: -fx-control-inner-background ;
+    -fx-background-color: -fx-table-cell-border-color, -fx-background ;
+    -fx-background-insets: 0, 0 0 1 0 ;
 }
 .table-row-cell:odd:filled:selected {
-  -fx-background: -fx-control-inner-background-alt ;
+    -fx-background: -fx-control-inner-background-alt ;
+}
+
+.table-cell {
+    -fx-accent: #2c2c2c;
 }
 
