--- a/classes/Organiza/FXMLDocument.fxml
+++ b/classes/Organiza/FXMLDocument.fxml
@@ -37,24 +37,24 @@
                         <Font name="Segoe UI Bold" size="26.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="btnMovies" layoutX="273.0" layoutY="1.0" onAction="#btnMoviesClicked" onMouseEntered="#btnMoviesMouseEntered" onMouseExited="#btnMoviesMouseExited" prefHeight="50.0" prefWidth="127.0" text="Movies" textFill="#b9b9b9">
+                  <JFXButton fx:id="btnMovies" layoutX="136.0" layoutY="-1.0" onAction="#btnMoviesClicked" onMouseEntered="#btnMoviesMouseEntered" onMouseExited="#btnMoviesMouseExited" prefHeight="50.0" prefWidth="127.0" text="Movies" textFill="#b9b9b9">
                      <font>
                         <Font name="Segoe UI" size="23.0" />
                      </font>
                   </JFXButton>
-                  <Label layoutX="9.0" layoutY="1.0" prefHeight="49.0" prefWidth="264.0" style="-fx-background-color: transparent;" text="Daniel's Organizer" textFill="#b5b5b5">
+                  <Label layoutX="9.0" layoutY="1.0" prefHeight="49.0" prefWidth="127.0" style="-fx-background-color: transparent;" text="Daniel" textFill="#b5b5b5">
                      <font>
-                        <Font name="Segoe UI Italic" size="30.0" />
+                        <Font name="Open Sans Extrabold" size="30.0" />
                      </font>
                   </Label>
-                  <JFXButton fx:id="btnTv" layoutX="400.0" layoutY="1.0" onAction="#btnTvClicked" onMouseEntered="#btnTvMouseEntered" onMouseExited="#btnTvMouseExited" prefHeight="50.0" prefWidth="133.0" text="TV Shows" textFill="#b9b9b9">
+                  <JFXButton fx:id="btnTv" layoutX="263.0" layoutY="-1.0" onAction="#btnTvClicked" onMouseEntered="#btnTvMouseEntered" onMouseExited="#btnTvMouseExited" prefHeight="50.0" prefWidth="133.0" text="TV Shows" textFill="#b9b9b9">
                      <font>
                         <Font name="Segoe UI" size="22.0" />
                      </font>
                   </JFXButton>
                </children>
             </Pane>
-            <ScrollPane fx:id="scrollMovies" cache="true" cacheHint="QUALITY" hbarPolicy="NEVER" layoutY="100.0" pannable="true" prefHeight="710.0" prefWidth="1000.0" style="-fx-background-color: #1b1b1b;" vbarPolicy="NEVER">
+            <ScrollPane fx:id="scrollMovies" hbarPolicy="NEVER" layoutY="100.0" pannable="true" prefHeight="710.0" prefWidth="1000.0" style="-fx-background-color: #1b1b1b;" vbarPolicy="NEVER">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="708.0" prefWidth="1000.0" style="-fx-background-color: #1b1b1b;">
                      <children>
@@ -70,7 +70,7 @@
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="708.0" prefWidth="1000.0" style="-fx-background-color: #abbc31;" />
                </content>
             </ScrollPane>
-            <Pane fx:id="paneMovieInfo" layoutY="100.0" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #3c3c3c;" visible="false">
+            <Pane fx:id="paneMovieInfo" layoutY="100.0" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: #3c3c3c;">
                <effect>
                   <DropShadow height="54.7325" radius="26.588124999999998" spread="0.11" width="53.62" />
                </effect>
@@ -97,7 +97,7 @@
                         <Font name="Segoe UI" size="34.0" />
                      </font>
                   </TextArea>
-                  <TextArea fx:id="textSummary" editable="false" layoutX="308.0" layoutY="187.0" prefHeight="335.0" prefWidth="648.0" style="-fx-text-fill: #d9d9d9;" stylesheets="@TableCss.css" text="&quot;A rat named Remy dreams of becoming a great French chef despite his family's wishes and the obvious problem of being a rat in a decidedly rodent-phobic profession. When fate places Remy in the sewers of Paris, he finds himself ideally situated beneath a restaurant made famous by his culinary hero, Auguste Gusteau. Despite the apparent dangers of being an unlikely - and certainly unwanted - visitor in the kitchen of a fine French restaurant, Remy's passion for cooking soon sets into motion a hilarious and exciting rat race that turns the culinary world of Paris upside down.&quot;," wrapText="true">
+                  <TextArea fx:id="textSummary" editable="false" layoutX="308.0" layoutY="187.0" prefHeight="237.0" prefWidth="648.0" style="-fx-text-fill: #d9d9d9;" stylesheets="@TableCss.css" text="&quot;A rat named Remy dreams of becoming a great French chef despite his family's wishes and the obvious problem of being a rat in a decidedly rodent-phobic profession. When fate places Remy in the sewers of Paris, he finds himself ideally situated beneath a restaurant made famous by his culinary hero, Auguste Gusteau. Despite the apparent dangers of being an unlikely - and certainly unwanted - visitor in the kitchen of a fine French restaurant, Remy's passion for cooking soon sets into motion a hilarious and exciting rat race that turns the culinary world of Paris upside down.&quot;," wrapText="true">
                      <font>
                         <Font name="Segoe UI" size="18.0" />
                      </font>
@@ -158,32 +158,32 @@
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="300.0" layoutY="532.0" text="Director:" textFill="#d9d9d9">
+                  <Label layoutX="299.0" layoutY="429.0" text="Director:" textFill="#d9d9d9">
                      <font>
                         <Font name="Segoe UI Bold Italic" size="16.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lblDirector" layoutX="378.0" layoutY="530.0" prefHeight="23.0" prefWidth="605.0" style="-fx-background-color: transparent;" text="Brad Bird" textFill="#d9d9d9">
+                  <Label fx:id="lblDirector" layoutX="377.0" layoutY="427.0" prefHeight="23.0" prefWidth="605.0" style="-fx-background-color: transparent;" text="Brad Bird" textFill="#d9d9d9">
                      <font>
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="314.0" layoutY="565.0" text="Actors:" textFill="#d9d9d9">
+                  <Label layoutX="313.0" layoutY="462.0" text="Actors:" textFill="#d9d9d9">
                      <font>
                         <Font name="Segoe UI Bold Italic" size="16.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lblActors" layoutX="378.0" layoutY="563.0" prefHeight="23.0" prefWidth="605.0" style="-fx-background-color: transparent;" text="Patton Oswalt, Ian Holm, Lou Romano, Brian Dennehy" textFill="#d9d9d9">
+                  <Label fx:id="lblActors" layoutX="377.0" layoutY="460.0" prefHeight="23.0" prefWidth="605.0" style="-fx-background-color: transparent;" text="Patton Oswalt, Ian Holm, Lou Romano, Brian Dennehy" textFill="#d9d9d9">
                      <font>
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="298.0" layoutY="599.0" text="Runtime:" textFill="#d9d9d9">
+                  <Label layoutX="297.0" layoutY="496.0" text="Runtime:" textFill="#d9d9d9">
                      <font>
                         <Font name="Segoe UI Bold Italic" size="16.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lblRuntime" layoutX="378.0" layoutY="597.0" prefHeight="23.0" prefWidth="237.0" style="-fx-background-color: transparent;" text="111 min" textFill="#d9d9d9">
+                  <Label fx:id="lblRuntime" layoutX="377.0" layoutY="494.0" prefHeight="23.0" prefWidth="237.0" style="-fx-background-color: transparent;" text="111 min" textFill="#d9d9d9">
                      <font>
                         <Font name="Segoe UI Bold" size="18.0" />
                      </font>
