--- a/src/Organiza/TableCss.css
+++ b/src/Organiza/TableCss.css
@@ -17,3 +17,28 @@
 .text-area, .text-area .viewport, .text-area .content {
     -fx-background-color: transparent ;
 }
+
+.combo-box .list-cell 
+{
+    -fx-background: white;
+    -fx-background-color: transparent;
+    -fx-text-fill: -fx-text-base-color;
+}
+
+.combo-box-popup .list-view 
+{
+    -fx-background-color: #8b8b8b;
+    -fx-background-insets: 0, 1;
+}    
+
+.combo-box-popup .list-view .list-cell 
+{
+    -fx-padding: 4 0 4 5;
+    -fx-background-color: #8b8b8b;
+    -fx-text-fill: #3b92c4;
+}
+
+.combo-box-popup .list-view .list-cell:filled:hover 
+{
+    -fx-background-color: #9e9e9e;
+}
